fix : swagger error